finished Nginx and totop 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 		<ol>
 			<li><a href="SublimeText3.html" >Sublime Test3 快捷键…………2017-7-7</a></li>
 			<li><a href="GetAndPost.html" >Get和Post的区别…………2017-7-27</a></li>	
-			<li><a href="HtmlLine.html">如何在Html中画一条线…………2017-7-27</a></li>		
+			<li><a href="HtmlLine.html">如何在Html中画一条线…………2017-7-27</a></li>	
+			<li><a href="Nginx.html">Nginx负载均衡(架构之路)…………2017-7-31</a></li>	
+			<li><a href="ToTop.html">返回页面顶部…………2017-7-31</a></li>
 		</ol>
     </div>
     <div class="div_click">
