--- a/GetAndPost.html
+++ b/GetAndPost.html
@@ -17,16 +17,6 @@
     }
     </script>
     <style type="text/css">
-    .div_detail {
-        width: 80%;
-        height: auto;
-        border: 1px solid #ccc;
-        background-color: #F5F5F5;
-        text-align: left;
-        margin: 10px 0px;
-        padding: 10px;
-        font-size: 14px;
-    }
     
     .div_detail p {
         text-indent: 2em;
@@ -50,10 +40,6 @@
         text-indent: 2em;
     }
     
-    .bodyleft {
-        width: auto;
-        padding: 0px 10px;
-    }
     </style>
 </head>
 
@@ -121,24 +107,24 @@
         <p>
             (1).首先是"GET方式提交的数据最多只能是1024个字节"，以为GET是通过URL提交数据，那么GET可提交的数据量就跟URL的长度有字节关系了。而实际上，<span style="color: blue">URL不存在参数上限的问题，HTTP协议规范没有对URL长度进行限制。</span>这个限制是特定的浏览器及服务器对它的限制。IE对URL长度的限制是2083字节(2K+35)。对于其他浏览器，如NetScape、FireFox等，理论上没有长度限制，其限制取决于操作系统的限制。
         </p>
-        <p>注意这个限制是整个URL的长度，不仅仅是你的参数值数据长度。</p>[见参考资料5]
+        <p>注意这个限制是整个URL的长度，不仅仅是你的参数值数据长度。</p>
         <p>
             (2).理论上讲，<span style="color: blue">POST是没有长度限制的，HTTP协议规范也没有进行长度限制</span>，说"POST数据量存在80K/100K的大小限制"是不准确的，POST数据是没有限制的，起限制作用的是服务器的处理程序的处理能力。
         </p>
         <p>对于ASP程序，Request对象处理每个表单时存在100K的数据长度限制。当如果使用Request.BinaryRead则没有这个限制。</p>
         <p>
             由这个延伸出去，对于IIS6.0，微软出于安全考虑，加大了限制。我们还需注意：</p>
-        <p style="text-indent: 4em;line-height: 10px"> 1).IIS 6.0默认ASP POST数据量最大为200KB，每个表单域限制是100KB。</p>
-        <p style="text-indent: 4em;line-height: 10px"> 2).IIS 6.0默认上传文件的最大大小是4MB。</p>
-        <p style="text-indent: 4em;line-height: 10px"> 3).IIS 6.0默认最大请求头是16KB。</p>
+        <p style="text-indent: 4em;line-height: 10px;font-size: 14px"> 1).IIS 6.0默认ASP POST数据量最大为200KB，每个表单域限制是100KB。</p>
+        <p style="text-indent: 4em;line-height: 10px;font-size: 14px"> 2).IIS 6.0默认上传文件的最大大小是4MB。</p>
+        <p style="text-indent: 4em;line-height: 10px;font-size: 14px"> 3).IIS 6.0默认最大请求头是16KB。</p>
         <p>
-            IIS6.0之前没有这些限制。[见参考资料5]
+            IIS6.0之前没有这些限制。<span style="font-size: 12px;">[见参考资料5]</span>
         </p>
         <p>
             所以上面的80K，100K可能只是默认值而已(注：关于IIS4和IIS5的参数，我还没确认)，但肯定是可以自己设置的。由于每个IIS对这些参数的默认值都不一样，具体请参考相关的IIS配置文档。
         </p>
         <p>
-            3.在ASP中，服务端获取GET请求参数用Request.QueryString，获取POST请求参数用Request.Form。在JSP中，用Request.getParameter(\"XXXX\")来获取，虽然jsp中也有Request.getQueryString()方法，但使用起来比较麻烦，比如：传一个test.jsp?name=hyddd&amp;password=hyddd，用Request.getQueryString()得到的是：name=hyddd&amp;password=hyddd。在PHP中，可以用$_GET和$_POST方法分别获取GET和POST中的数据。而$_REQUEST则可以获取GET和POST两种请求中的数据。值得注意的是，JSP中使用request和PHP中使用$_REQUEST都会有隐患，这个下次再写个文章总结。
+            3.在ASP中，服务端获取GET请求参数用Request.QueryString，获取POST请求参数用Request.Form。在JSP中，用Request.getParameter("XXXX")来获取，虽然jsp中也有Request.getQueryString()方法，但使用起来比较麻烦，比如：传一个test.jsp?name=hyddd&amp;password=hyddd，用Request.getQueryString()得到的是：name=hyddd&amp;password=hyddd。在PHP中，可以用$_GET和$_POST方法分别获取GET和POST中的数据。而$_REQUEST则可以获取GET和POST两种请求中的数据。值得注意的是，JSP中使用request和PHP中使用$_REQUEST都会有隐患，这个下次再写个文章总结。
         </p>
         <p>
             4.POST的安全性要比GET高。注意：这里所说的安全性和上面GET提到的"安全"不是同一个概念。上面"安全"的含义仅仅是不做数据修改，而这里安全的含义是真正的Security的含义，比如，通过GET提交数据，用户名和密码将明文出现在URL上，因为(1)登录页面有可能被浏览器缓存，(2)其他人查看浏览器的历史记录，那么别人就可以拿到你的账号和密码了，除此之外，使用GET提交数据还可能会造成Cross-site request forgery攻击。
