finish fibonacci and page's width,use calc(expression)

--- a/aboutindex.html
+++ b/aboutindex.html
@@ -9,11 +9,11 @@
     <meta name="keywords" content="">
     <link href="" rel="stylesheet">
     <!-- 首页样式 -->
-    <script type="text/javascript" js="js/MainDefault.js"></script>
+    <script type="text/javascript" src="js/MainDefault.js"></script>
     <link rel="stylesheet" type="text/css" href="css/MainDefault.css">
     <script type="text/javascript">
     window.onload = function() {
-        setBodyWidth();
+
     }
     </script>
     <style type="text/css">
@@ -236,7 +236,7 @@
 				<p>查询速度：2513毫秒</p>
 				<div class="div_detail detail_indent">
 					select gid,fariqi,neibuyonghu,title from Tgongwen <br>
-					where fariqi > "2004-5-5" and neibuyongbu = "办公室"
+					where fariqi > "2004-5-5" and neibuyonghu = "办公室"
 				</div>
 				<p>查询速度：2516毫秒</p>
 				<div class="div_detail detail_indent">
