--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <li><a href="aspnet.html">Asp.Net随笔…………2017-8-9</a></li>
             <li><a href="aboutindex.html">聚集索引和非聚集索引…………2017-8-10</a></li>
             <li><a href="fibonacci.html">斐波那契数列…………2017-8-12</a></li>
+            <li><a href="polymorphism.html">c#中的多态…………2017-8-13</a></li>
         </ol>
     </div>
     <div class="div_click">
