--- a/aspnet.html
+++ b/aspnet.html
@@ -67,6 +67,10 @@
 		border: 1px solid #ccc;
 		opacity: .3;
     }
+
+    .bodycolor{
+        background-color: transparent;
+    }
     
     </style>
 </head>
@@ -75,7 +79,7 @@
     <div id="myhead">
         <h2 style="margin-top: 12px">Asp.Net 随笔</h2>
     </div>
-    <div id="mybody" class="div_body bodyleft">
+    <div id="mybody" class="div_body bodyleft bodycolor">
         <h2 style="color:#89C1FC">Asp.Net 随笔(待详细描述)</h2>
         <hr>
 
