--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         background-image: url(image/bg.png);
         margin: 0px;
     }
+
+    .bodycolor{
+    	background-color:transparent;
+    }
     
     #myhead {
         width: 100%;
@@ -63,7 +67,7 @@
     <div id="myhead">
         <h2 style="margin-top: 12px">Jian's Essay</h2>
     </div>
-    <div id="mybody" class="div_body">
+    <div id="mybody" class="div_body bodycolor">
         <h3 style="color:#89C1FC">最新随笔</h3>
         <ol style="color:#89C1FC">
             <li><a href="SublimeText3.html">Sublime Test3 快捷键…………2017-7-7</a></li>
@@ -76,6 +80,7 @@
             <li><a href="fibonacci.html">斐波那契数列…………2017-8-12</a></li>
             <li><a href="polymorphism.html">c#中的多态…………2017-8-13</a></li>
             <li><a href="arraylist.html">c#中的数组、ArrayList和List的区别…………2017-8-14</a></li>
+            <li><a href="highconcurrency.html">【高并发解决方案】1.秒杀系统架构分析与实战…………2017-8-16</a></li>
         </ol>
     </div>
     <div class="div_click">
