finish c# string/stringbuffer/stringbuilder

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <li><a href="polymorphism.html">c#中的多态…………2017-8-13</a></li>
             <li><a href="arraylist.html">c#中的数组、ArrayList和List的区别…………2017-8-14</a></li>
             <li><a href="highconcurrency.html">【高并发解决方案】1.秒杀系统架构分析与实战…………2017-8-16</a></li>
+            <li><a href="string.html">c#中的string、stringbuffer和stringbuilder…………2017-8-18</a></li>
         </ol>
     </div>
     <div class="div_click">
