finish valuetype.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -70,7 +70,7 @@
     <div id="mybody" class="div_body bodycolor">
         <h3 style="color:#89C1FC">最新随笔</h3>
         <ol style="color:#89C1FC">
-            <li><a href="SublimeText3.html">Sublime Test3 快捷键…………2017-7-7</a></li>
+            <li><a href="SublimeText3.html">Sublime Text3 快捷键…………2017-7-7</a></li>
             <li><a href="GetAndPost.html">Get和Post的区别…………2017-7-27</a></li>
             <li><a href="HtmlLine.html">如何在Html中画一条线…………2017-7-27</a></li>
             <li><a href="Nginx.html">Nginx负载均衡(架构之路)…………2017-7-31</a></li>
@@ -82,6 +82,7 @@
             <li><a href="arraylist.html">c#中的数组、ArrayList和List的区别…………2017-8-14</a></li>
             <li><a href="highconcurrency.html">【高并发解决方案】1.秒杀系统架构分析与实战…………2017-8-16</a></li>
             <li><a href="string.html">c#中的string、stringbuffer和stringbuilder…………2017-8-18</a></li>
+            <li><a href="valuetype.html">c#中值类型和引用类型，==和equals，GetHashCode的区别和使用…………2017-9-15</a></li>
         </ol>
     </div>
     <div class="div_click">
