update introduction 1:can't use the image in laji baidu, so upload image to Aliyun and use it.

--- a/md/Ex1_2018-3-19.html
+++ b/md/Ex1_2018-3-19.html
@@ -280,7 +280,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <pre><code>![alt text](/path/to/img.jpg &quot;Title&quot;)
 </code></pre>
 
-<p><a href="https://www.baidu.com" title="百度首页"><img src="http://f.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=f00c36674610b912bf94fefaf6cdd035/7aec54e736d12f2e8425dfbc4ec2d562843568cd.jpg" title="带链接的萌妹子!" /></a>{:target=&quot;_blank&quot;}</p>
+<p><a href="http://jianwill.cn/image/md/mengmeizi1.jpg" title="萌妹子1"><img src="http://jianwill.cn/image/md/mengmeizi1.jpg" title="带链接的萌妹子!" /></a>{:target=&quot;_blank&quot;}</p>
 <p><em>ps:{:target=&quot;_blank&quot;}兼容性一般，多数第三方平台不支持跳转</em></p>
 <p>2.参考形式</p>
 <pre><code>![alt text][id]
@@ -292,8 +292,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 </code></pre>
 
 <p>Ex:</p>
-<p><img src="http://f.hiphotos.baidu.com/zhidao/wh%3D450%2C600/sign=f00c36674610b912bf94fefaf6cdd035/7aec54e736d12f2e8425dfbc4ec2d562843568cd.jpg" alt="alt text" title="萌妹子!" />
-<img src="http://img5.duitang.com/uploads/item/201409/30/20140930003013_vwfN2.jpeg" alt="alt text" title="还是萌妹子！(好大的萌妹子(～ o ～)~zZ)" /></p>
+<p><img src="http://jianwill.cn/image/md/mengmeizi1.jpg" alt="alt text" title="萌妹子!" />
+<img src="http://jianwill.cn/image/md/mengmeizi2.jpeg" alt="alt text" title="还是萌妹子！(好大的萌妹子(～ o ～)~zZ)" /></p>
 <h1>代码</h1>
 <ul>
 <li>普通段落，使用反引号``标记代码区段。 </li>
