--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <li><a href="md/Ex1_2018-3-19.html">md入门1…………2018-3-19</a> </li>
             <li><a href="md/Ex2_2018-3-20.html">md入门2…………2018-3-20</a> </li>
             <li><a href="md/New1_2018-3-21.html">md:开始使用Markdown1…………2018-3-21</a> </li>
+            <li><a href="md/ReThink2_2018-4-22.html">md:反思2…………2018-4-22</a></li>
         </ol>
     </div>
     <div class="div_click">
