--- a/index.html
+++ b/index.html
@@ -70,24 +70,24 @@
     <div id="mybody" class="div_body bodycolor">
         <h3 style="color:#89C1FC">最新随笔</h3>
         <ol style="color:#89C1FC">
-            <li><a href="SublimeText3.html">Sublime Text3 快捷键…………2017-7-7</a></li>
-            <li><a href="GetAndPost.html">Get和Post的区别…………2017-7-27</a></li>
-            <li><a href="HtmlLine.html">如何在Html中画一条线…………2017-7-27</a></li>
-            <li><a href="Nginx.html">Nginx负载均衡(架构之路)…………2017-7-31</a></li>
-            <li><a href="ToTop.html">返回页面顶部…………2017-7-31</a></li>
-            <li><a href="aspnet.html">Asp.Net随笔…………2017-8-9</a></li>
-            <li><a href="aboutindex.html">聚集索引和非聚集索引…………2017-8-10</a></li>
-            <li><a href="fibonacci.html">斐波那契数列…………2017-8-12</a></li>
-            <li><a href="polymorphism.html">c#中的多态…………2017-8-13</a></li>
-            <li><a href="arraylist.html">c#中的数组、ArrayList和List的区别…………2017-8-14</a></li>
-            <li><a href="highconcurrency.html">【高并发解决方案】1.秒杀系统架构分析与实战…………2017-8-16</a></li>
-            <li><a href="string.html">c#中的string、stringbuffer和stringbuilder…………2017-8-18</a></li>
-            <li><a href="valuetype.html">c#中值类型和引用类型，==和equals，GetHashCode的区别和使用…………2017-9-15</a></li>
+            <li><a href="SublimeText3.html" target="_blank">Sublime Text3 快捷键…………2017-7-7</a></li>
+            <li><a href="GetAndPost.html" target="_blank">Get和Post的区别…………2017-7-27</a></li>
+            <li><a href="HtmlLine.html" target="_blank">如何在Html中画一条线…………2017-7-27</a></li>
+            <li><a href="Nginx.html" target="_blank">Nginx负载均衡(架构之路)…………2017-7-31</a></li>
+            <li><a href="ToTop.html" target="_blank">返回页面顶部…………2017-7-31</a></li>
+            <li><a href="aspnet.html" target="_blank">Asp.Net随笔…………2017-8-9</a></li>
+            <li><a href="aboutindex.html" target="_blank">聚集索引和非聚集索引…………2017-8-10</a></li>
+            <li><a href="fibonacci.html" target="_blank">斐波那契数列…………2017-8-12</a></li>
+            <li><a href="polymorphism.html" target="_blank">c#中的多态…………2017-8-13</a></li>
+            <li><a href="arraylist.html" target="_blank">c#中的数组、ArrayList和List的区别…………2017-8-14</a></li>
+            <li><a href="highconcurrency.html" target="_blank">【高并发解决方案】1.秒杀系统架构分析与实战…………2017-8-16</a></li>
+            <li><a href="string.html" target="_blank">c#中的string、stringbuffer和stringbuilder…………2017-8-18</a></li>
+            <li><a href="valuetype.html" target="_blank">c#中值类型和引用类型，==和equals，GetHashCode的区别和使用…………2017-9-15</a></li>
             <br>
             ----------------------------------我是分割线----------------------------------
-            <li><a href="md/Ex1_2018-3-19.html">md入门1…………2018-3-19</a> </li>
-            <li><a href="md/Ex2_2018-3-20.html">md入门2…………2018-3-20</a> </li>
-            <li><a href="md/New1_2018-3-21.html">md:开始使用Markdown1…………2018-3-21</a> </li>
+            <li><a href="md/Ex1_2018-3-19.html" target="_blank">md入门1…………2018-3-19</a> </li>
+            <li><a href="md/Ex2_2018-3-20.html" target="_blank">md入门2…………2018-3-20</a> </li>
+            <li><a href="md/New1_2018-3-21.html" target="_blank">md:开始使用Markdown1…………2018-3-21</a> </li>
             <li><a href="">md:反思2…………2018-4-22</a></li>
             <!--<li><a href="">md:GTA5 女角色捏脸…………2018-7-15</a></li>-->
         </ol>
