update md1, add more info

--- a/md/Ex1_2018-3-19.html
+++ b/md/Ex1_2018-3-19.html
@@ -210,18 +210,42 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <h2>A Second Level Header</h2>
 <p>Now is the time for all good men to come to the aid of their country.This is just a regular paragraph.</p>
 <p>The quick brown fox jumped over the lazy dog's back.</p>
+<pre><code>#header1
+##header2
+###header3
+####header4
+#####header5
+######header6
+</code></pre>
+
 <h1>header1</h1>
 <h2>header2</h2>
 <h3>header3</h3>
 <h4>header4</h4>
-<h6>header5</h6>
+<h5>header5</h5>
 <h6>header6</h6>
+<pre><code>&gt; This is a blockquote.
+&gt; 
+&gt; This is the second paragraph in the blockquote.
+&gt;
+&gt; ## This is an H2 in a blockquote
+</code></pre>
+
 <blockquote>
 <p>This is a blockquote.</p>
 <p>This is the second paragraph in the blockquote.</p>
 <h2>This is an H2 in a blockquote</h2>
 </blockquote>
 <h1>修饰和强调</h1>
+<pre><code>*xx*,_xx_： 斜体
+**xx**,__xx__:加粗
+
+some of those words *are emphasized*.
+Some of those words _are emphasized also_.
+Use two asterisks for **string emphasiezd**.
+Or, if you prefer, __use two underscores instead__.
+</code></pre>
+
 <p>some of those words <em>are emphasized</em>.</p>
 <p>Some of those words <em>are emphasized also</em>.</p>
 <p>Use two asterisks for <strong>string emphasiezd</strong>.</p>
@@ -229,18 +253,33 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <h1>列表</h1>
 <p>1.无序列表</p>
 <p>星号：</p>
+<pre><code>* Candy.
+* Gum.
+* Booze.
+</code></pre>
+
 <ul>
 <li>Candy.</li>
 <li>Gum.</li>
 <li>Booze.</li>
 </ul>
 <p>加号：</p>
+<pre><code>+ Candy.
++ Gum.
++ Booze.
+</code></pre>
+
 <ul>
 <li>Candy.</li>
 <li>Gum.</li>
 <li>Booze.</li>
 </ul>
 <p>减号：</p>
+<pre><code>- Candy.
+- Gum.
+- Booze.
+</code></pre>
+
 <ul>
 <li>Candy.</li>
 <li>Gum.</li>
@@ -248,12 +287,21 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 </ul>
 <p>2.有序列表</p>
 <p>数字：</p>
+<pre><code>1. Candy.
+2. Gum.
+3. Booze.
+* A list item.
+
+    With multiple paragraphs.
+* Another list item.
+
+    hahahaha.
+</code></pre>
+
 <ol>
 <li>Candy.</li>
 <li>Gum.</li>
-<li>
-<p>Booze.</p>
-</li>
+<li>Booze.</li>
 <li>
 <p>A list item.</p>
 <p>With multiple paragraphs.</p>
@@ -267,48 +315,76 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <ol>
 <li>
 <p>行内链接</p>
+<pre><code>[text](URL &quot;Title&quot;)
+</code></pre>
+
 <p>This is an <a href="http://example.com">example link</a>.</p>
 <p>This is an <a href="http://example.com" title="With a Title">example link</a>.</p>
 </li>
 <li>
 <p>参考链接</p>
+<pre><code>I got 10 times more traffic from [Google][1] than from [Yahoo][2] or [MSN][3].
+
+[1]: http://google.com/ &quot;Google&quot;
+[2]: http://search.yahoo.com/ &quot;Yahoo Search&quot;
+[3]: http://msn.search.com/ &quot;MSN Search&quot;
+</code></pre>
+
 <p>I got 10 times more traffic from <a href="http://google.com/" title="Google">Google</a> than from <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://msn.search.com/" title="MSN Search">MSN</a>.</p>
 </li>
 </ol>
 <h1>图片</h1>
-<p>1.行内形式</p>
+<ol>
+<li>
+<p>行内形式</p>
 <pre><code>![alt text](/path/to/img.jpg &quot;Title&quot;)
+[![alt text](ImageURL &quot;Image title&quot;)](URL &quot;url title&quot;)
 </code></pre>
 
 <p><a href="http://jianwill.cn/image/md/mengmeizi1.jpg" title="萌妹子1"><img src="http://jianwill.cn/image/md/mengmeizi1.jpg" title="带链接的萌妹子!" /></a>{:target=&quot;_blank&quot;}</p>
 <p><em>ps:{:target=&quot;_blank&quot;}兼容性一般，多数第三方平台不支持跳转</em></p>
-<p>2.参考形式</p>
+</li>
+<li>
+<p>参考形式</p>
 <pre><code>![alt text][id]
 [id]: /path/to/img.jpg &quot;Title&quot;
 </code></pre>
 
-<p>3.输出html</p>
+</li>
+<li>
+<p>输出html</p>
 <pre><code>&lt;img src=&quot;path/to/img.jpg&quot; alt=&quot;alt text&quot; title=&quot;Title&quot; /&gt;
 </code></pre>
 
 <p>Ex:</p>
 <p><img src="http://jianwill.cn/image/md/mengmeizi1.jpg" alt="alt text" title="萌妹子!" />
 <img src="http://jianwill.cn/image/md/mengmeizi2.jpeg" alt="alt text" title="还是萌妹子！(好大的萌妹子(～ o ～)~zZ)" /></p>
+</li>
+</ol>
 <h1>代码</h1>
 <ul>
-<li>普通段落，使用反引号``标记代码区段。 </li>
-</ul>
+<li>
+<p>普通段落，使用反引号``标记代码区段。 </p>
+<pre><code>I strongly recommend against using any `&lt;blink&gt;` tags.
+</code></pre>
+
 <p>I strongly recommend against using any <code>&lt;blink&gt;</code> tags.</p>
-<p>I wish SmartyPants used named entities like <code>&amp;mdash</code> instead of deciml-encoded entities like <code>&amp;#8212;</code>.  </p>
-<ul>
-<li>已经格式好的代码区段，只要每行都缩进4个空格或1个tab即可。(不需要反引号``)</li>
-</ul>
+<pre><code>I wish SmartyPants used named entities like `&amp;mdash` instead of deciml-encoded entities like `&amp;#8212;`.  
+</code></pre>
+
+<p>I wish SmartyPants used named entities like <code>&amp;mdash</code> instead of deciml-encoded entities like <code>&amp;#8212;</code>.  
+</p>
+</li>
+<li>
+<p>已经格式好的代码区段，只要每行都缩进4个空格或1个tab即可。(不需要反引号``)</p>
 <p>If you want your page to avlidate under XHTML 1.0 Strict, you've got to put paragraph tags in your blockquotes:</p>
 <pre><code>&lt;blockquote&gt;
 &lt;p&gt;For example&lt;/p&gt;
 &lt;/blockquote&gt;
 </code></pre>
 
+</li>
+</ul>
 
 </body>
 </html>
