finish git-spec_2019-2-21.html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <li><a href="md/New1_2018-3-21.html" target="_blank">md:开始使用Markdown1…………2018-3-21</a> </li>
             <li><a href="">md:反思2…………2018-4-22</a></li>
             <!--<li><a href="">md:GTA5 女角色捏脸…………2018-7-15</a></li>-->
+			<li><a href="md/git-spec_2019-2-21.html" target="_blank">md:Git使用教程…………2019-2-21</a></li>
         </ol>
     </div>
     <div class="div_click">
