--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
             <li><a href="">md:反思2…………2018-4-22</a></li>
             <!--<li><a href="">md:GTA5 女角色捏脸…………2018-7-15</a></li>-->
 			<li><a href="md/git-spec_2019-2-21.html" target="_blank">md:Git使用教程…………2019-2-21</a></li>
+            <li><a href="md/myHtml_2019-2-26.html" target="_blank">md:Html使用教程…………2019-2-26</a></li>
+            <li><a href="md/myCss_2019-3-2.html" target="_blank">md:Css使用教程…………2019-3-2</a></li>
         </ol>
     </div>
     <div class="div_click">
