finish myJs_2019-3-12.html

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 			<li><a href="md/git-spec_2019-2-21.html" target="_blank">md:Git使用教程…………2019-2-21</a></li>
             <li><a href="md/myHtml_2019-2-26.html" target="_blank">md:Html使用教程…………2019-2-26</a></li>
             <li><a href="md/myCss_2019-3-2.html" target="_blank">md:Css使用教程…………2019-3-2</a></li>
+            <li><a href="md/myJs_2019-3-12.html" target="_blank">md:Js使用教程…………2019-3-12</a></li>
         </ol>
     </div>
     <div class="div_click">
