finish JsDOM Chapter12 demo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Jian's Essay</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="" rel="stylesheet">
     <!-- 添加首页样式 -->
     <script type="text/javascript" src="js/MainDefault.js"></script>
     <link rel="stylesheet" type="text/css" href="css/MainDefault.css">
@@ -94,6 +93,7 @@
             <li><a href="md/myHtml_2019-2-26.html" target="_blank">md:Html使用教程…………2019-2-26</a></li>
             <li><a href="md/myCss_2019-3-2.html" target="_blank">md:Css使用教程…………2019-3-2</a></li>
             <li><a href="md/myJs_2019-3-12.html" target="_blank">md:Js使用教程…………2019-3-12</a></li>
+            <li><a href="demo/JsDOM/index.html" target="_blank">JavaScript DOM 编程艺术 Chapter12 综合示例…………2019-3-22</a></li>
         </ol>
     </div>
     <div class="div_click">
