--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <li><a href="md/myJs_2019-3-12.html" target="_blank">md:Js使用教程…………2019-3-12</a></li>
             <li><a href="demo/JsDOM/index.html" target="_blank">JavaScript DOM 编程艺术 Chapter12 综合示例…………2019-3-22</a></li>
             <li><a href="md/myJquery_2019-3-25.html" target="_blank">md:Jquery使用教程…………2019-3-25</a></li>
+            <li><a href="md/myBootStrap_2019-3-30.html" target="_blank">md:BootStrap使用教程…………2019-3-30</a></li>
         </ol>
     </div>
     <div class="div_click">
