update image files

--- a/md/Ex1_2018-3-19.html
+++ b/md/Ex1_2018-3-19.html
@@ -358,7 +358,7 @@ Or, if you prefer, __use two underscores instead__.
 
 <p>Ex:</p>
 <p><img src="http://jianwill.cn/image/md/mengmeizi1.jpg" alt="alt text" title="萌妹子!" />
-<img src="http://jianwill.cn/image/md/mengmeizi2.jpeg" alt="alt text" title="还是萌妹子！(好大的萌妹子(～ o ～)~zZ)" /></p>
+<img src="http://jianwill.cn/image/md/mengmeizi2.jpg" alt="alt text" title="还是萌妹子！(好大的萌妹子(～ o ～)~zZ)" /></p>
 </li>
 </ol>
 <h1>代码</h1>
