update allimages.html, due to haven't deploy nodejs in website

--- a/md/allimages.html
+++ b/md/allimages.html
@@ -15,15 +15,16 @@
             <p>All images related in markdown in this project</p>
         </header>
     </div>
+    <div class="col-xs-12 col-md-8">
+        <div id="imgCarousel" class="carousel slide">
+        </div>
+        <p id="imgName">&nbsp;</p>
+    </div>
     <div class="col-xs-12 col-md-4">
         <ul id="ulImgs">
         </ul>
     </div>
-    <div class="col-xs-12 col-md-8">
-        <div id="imgCarousel" class="carousel slide">
-        </div>
-        <p id="imgName">imgName</p>
-    </div>
+
 </div>
 
 <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
