--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <li><a href="md/myBootStrap_2019-3-30.html" target="_blank">md:BootStrap使用教程…………2019-3-30</a></li>
             <li><a href="md/allimages.html" target="_blank">all images in markdown…………2019-4-1</a></li>
             <li><a href="md/essay1_2019-4-2.html" target="_blank">essay1…………2019-4-2</a></li>
+            <li><a href="md/linuxList_2019-4-9.html" target="_blank">md:Linux命令大全…………2019-4-9</a></li>
         </ol>
     </div>
     <div class="div_click">
