init myES6_2019-4-14.html, Add define and expression info

--- a/index.html
+++ b/index.html
@@ -100,14 +100,15 @@
             <li><a href="md/essay1_2019-4-2.html" target="_blank">essay1…………2019-4-2</a></li>
             <li><a href="md/linuxList_2019-4-9.html" target="_blank">md:Linux命令大全…………2019-4-9</a></li>
             <li><a href="md/mdList_2019-4-13.html" target="_blank">md:Markdown目录总结…………2019-4-13</a></li>
+            <li><a href="md/myES6_2019-4-14.html" target="_blank">md:ES6使用教程…………2019-4-14</a></li>
         </ol>
     </div>
-    <div class="div_click">
-        <div class="div_click_1">
-            <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_tr.js"></script>
-            <!-- <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script> -->
-        </div>
-    </div>
+<!--    <div class="div_click">-->
+<!--        <div class="div_click_1">-->
+<!--            <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_tr.js"></script>-->
+<!--            &lt;!&ndash; <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script> &ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
 </body>
 
 </html>
