--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         background-color: #ccc;
         opacity: .3;
     }
+    .footer {
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        font-size: 14px;
+    }
     
     </style>
 </head>
@@ -102,6 +109,9 @@
             <li><a href="md/mdList_2019-4-13.html" target="_blank">md:Markdown目录总结…………2019-4-13</a></li>
             <li><a href="md/myES6_2019-4-14.html" target="_blank">md:ES6使用教程…………2019-4-14</a></li>
         </ol>
+    </div>
+    <div class="footer">
+        <a href="http://www.beian.miit.gov.cn">粤ICP备17096914号-1</a>
     </div>
 <!--    <div class="div_click">-->
 <!--        <div class="div_click_1">-->
